# Martos

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile2  README.md
.github/workflows/: action.yml  ci.yml  dockers.yml  rust.yml
c-library/mips64/: Cargo.toml
c-library/mips64/.cargo/: config.toml
c-library/mips64/src/: lib.rs
c-library/risc-v-esp32-c6/: Cargo.toml  README.md
c-library/risc-v-esp32-c6/src/: lib.rs
c-library/xtensa-esp32/: Cargo.toml  README.md
c-library/xtensa-esp32/.cargo/: config.toml
c-library/xtensa-esp32/src/: lib.rs
dockers/esp/: esp.dockerfile
dockers/qemu/: qemu.dockerfile
dockers/risc-v-esp32c6/c-dependencies/: risc-v-esp32c6-c.dockerfile
dockers/xtensa-esp32/c-dependencies/: xtensa-esp32-c.dockerfile
dockers/xtensa-esp32/rust-dependencies/: xtensa-esp32-rust.dockerfile
docs/: README.md  time-sync-diagrams.md  time-synchronization.md
examples/c-examples/ex/: CMakeLists.txt  wokwi.toml
examples/c-examples/ex/components/rust_ex/: CMakeLists.txt  Cargo.toml  build.rs
examples/c-examples/ex/components/rust_ex/src/: lib.rs
examples/c-examples/ex/main/: CMakeLists.txt  main.c
examples/c-examples/mips64/: Makefile  README.md
examples/c-examples/mips64/src/: main.c
examples/c-examples/risc-v-esp32-c6/: .gitignore  Makefile  README.md
examples/c-examples/risc-v-esp32-c6/ld/: esp32.ld
examples/c-examples/risc-v-esp32-c6/src/: main.c
examples/c-examples/risc-v-esp32c6/: Makefile  README.md
examples/c-examples/risc-v-esp32c6/ld/: esp32c6.ld  esp32c6.rom.ld
examples/c-examples/risc-v-esp32c6/src/: main.c
examples/c-examples/xtensa-esp32/: CMakeLists.txt  Makefile  README.md  diagram.json  esp32.ld  wokwi.toml
examples/c-examples/xtensa-esp32/components/rust-xtensa-esp32/: CMakeLists.txt  Cargo.toml
examples/c-examples/xtensa-esp32/ld/: esp32.ld
examples/c-examples/xtensa-esp32/main/: CMakeLists.txt  hello_world_main.c
examples/c-examples/xtensa-esp32/src/: main.c
examples/rust-examples/mips64/dynamic-memory/: README.md
examples/rust-examples/mips64/dynamic-memory/src/: main.rs
examples/rust-examples/mips64/hello-world/: Cargo.toml  README.md
examples/rust-examples/mips64/hello-world/.cargo/: config.toml
examples/rust-examples/mips64/scheduler/cooperative/: Cargo.toml  README.md
examples/rust-examples/mips64/scheduler/cooperative/.cargo/: config.toml
examples/rust-examples/mips64/scheduler/cooperative/src/: main.rs
examples/rust-examples/mips64/timer/: Cargo.toml  README.md
examples/rust-examples/risc-v-esp32-c6/dynamic-memory/: Cargo.toml  README.md
examples/rust-examples/risc-v-esp32-c6/hello-world/: README.md
examples/rust-examples/risc-v-esp32-c6/scheduler/: Cargo.toml  README.md
examples/rust-examples/risc-v-esp32-c6/scheduler/cooperative/: Cargo.toml  README.md
examples/rust-examples/risc-v-esp32-c6/scheduler/cooperative/src/: main.rs
examples/rust-examples/risc-v-esp32-c6/scheduler/src/: main.rs
examples/rust-examples/risc-v-esp32-c6/time-sync/: Cargo.toml  README.md
examples/rust-examples/risc-v-esp32-c6/time-sync/.cargo/: config.toml
examples/rust-examples/risc-v-esp32-c6/time-sync/src/: main.rs
examples/rust-examples/risc-v-esp32-c6/timer/: Cargo.toml  README.md
examples/rust-examples/risc-v-esp32-c6/timer/src/: main.rs
examples/rust-examples/risc-v-esp32-c6/uart/: Cargo.toml  README.md
examples/rust-examples/risc-v-esp32-c6/wifi/: Cargo.toml  README.md
examples/rust-examples/xtensa-esp32/: Cargo.toml  README.md
examples/rust-examples/xtensa-esp32/.cargo/: config.toml
examples/rust-examples/xtensa-esp32/dynamic-memory/: Cargo.toml  README.md
examples/rust-examples/xtensa-esp32/dynamic-memory/src/: main.rs
examples/rust-examples/xtensa-esp32/hello-world/: Cargo.toml  README.md
examples/rust-examples/xtensa-esp32/hello-world/src/: main.rs
examples/rust-examples/xtensa-esp32/scheduler/: Cargo.toml  README.md
examples/rust-examples/xtensa-esp32/scheduler/.cargo/: config.toml
examples/rust-examples/xtensa-esp32/scheduler/cooperative/: Cargo.toml  README.md
examples/rust-examples/xtensa-esp32/scheduler/cooperative/src/: main.rs
examples/rust-examples/xtensa-esp32/scheduler/preemptive/: Cargo.toml  README.md
examples/rust-examples/xtensa-esp32/scheduler/preemptive/.cargo/: config.toml
examples/rust-examples/xtensa-esp32/scheduler/preemptive/src/: main.rs
examples/rust-examples/xtensa-esp32/scheduler/src/: main.rs
examples/rust-examples/xtensa-esp32/src/: main.rs
examples/rust-examples/xtensa-esp32/time-sync/: Cargo.toml  README.md
examples/rust-examples/xtensa-esp32/time-sync/.cargo/: config.toml
examples/rust-examples/xtensa-esp32/time-sync/src/: main.rs
examples/rust-examples/xtensa-esp32/timer/: Cargo.toml  README.md
examples/rust-examples/xtensa-esp32/timer/.cargo/: config.toml
examples/rust-examples/xtensa-esp32/timer/src/: main.rs
examples/rust-examples/xtensa-esp32/uart/: Cargo.toml  README.md
examples/rust-examples/xtensa-esp32/uart/.cargo/: config.toml
examples/rust-examples/xtensa-esp32/uart/src/: main.rs
examples/rust-examples/xtensa-esp32/wifi/: Cargo.toml  README.md
examples/rust-examples/xtensa-esp32/wifi/.cargo/: config.toml
examples/rust-examples/xtensa-esp32/wifi/src/: main.rs
src/: c_api.rs  connection.rs  context_switcher.rs  lib.rs  main.rs  task_manager.rs  time_sync.rs  timer.rs
src/ports/: mod.rs
src/ports/mips64/: hardware_timer.rs  memory_manager.rs  mod.rs  network.rs  uart.rs
src/ports/mok/: hardware_timer.rs  memory_manager.rs  mod.rs  network.rs  peripherals.rs  uart.rs
src/ports/xtensa_esp32/: hardware_timer.rs  memory_manager.rs  mod.rs  network.rs  peripherals.rs  preempt.rs  uart.rs
src/task_manager/: cooperative.rs  mod.rs  preemptive.rs  task.rs  tm.rs
src/time_sync/: esp_now_protocol.rs  sync_algorithm.rs
tests/: cooperative_tests.rs  integration_tests.rs  task_manager_tests.rs  task_manager_unit_tests.rs  tests.rs  time_sync_algorithm_tests.rs  time_sync_tests.rs  timer_tests.rs  timer_unit_tests.rs  unit_tests.rs
tests/mips64/: timer_tests.rs
(+9 files in other folders)
