[package]
name = "martos"
version = "0.3.0"
edition = "2021"
description = "Martos is an elegant real-time operating system designed for creating complex multi-agent systems. Developers have the flexibility to write software for Martos using either Rust (preferred) or C languages."
documentation = "https://github.com/IvanArkhipov1999/Martos"
readme = "README.md"
homepage = "https://github.com/IvanArkhipov1999/Martos"
repository = "https://github.com/IvanArkhipov1999/Martos"
license = "MIT OR Apache-2.0"

[features]
default = []
c-library = []
network = []

[dependencies]

[target.'cfg(any(target_arch = "riscv32", target_arch = "xtensa"))'.dependencies]
esp-alloc = "0.4.0"
esp-hal = "0.20.0"
esp-wifi = { version = "0.9.1", features = ["wifi"] }

[dev-dependencies]
sequential-test = "0.2.4"
