[package]
name = "martos"
version = "0.4.0"
edition = "2021"
description = "Martos is an elegant real-time operating system designed for creating complex multi-agent systems. Developers have the flexibility to write software for Martos using either Rust (preferred) or C languages."
documentation = "https://github.com/IvanArkhipov1999/Martos"
readme = "README.md"
homepage = "https://github.com/IvanArkhipov1999/Martos"
repository = "https://github.com/IvanArkhipov1999/Martos"
license = "MIT OR Apache-2.0"

[features]
default = []
c-library = []
cooperative = []
preemptive = []
network = ["esp-wifi"]
mips64_timer_tests = []
cooperative_tests = []

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(any(target_arch = "riscv32", target_arch = "xtensa"))'.dependencies]
esp-alloc = "0.5.0"
esp-hal = "0.21.1"
esp-wifi = { version = "0.10.1", features = ["wifi"], optional = true }

[dev-dependencies]
sequential-test = "0.2.4"
