[package]
name = "mips64_static_lib"
version = "0.4.0"
edition = "2021"

[lib]
name = "libmips64_static_lib"
crate-type = ["staticlib"]

[profile.release]
panic = "abort"
debug = true

[dependencies]
# Specifying Martos version
#martos = { version = "0.4.0", features = ["c-library"] }
# Specifying current Martos version path for ci
martos = { path = "../../", features = ["c-library"] }
