[package]
name = "time-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
martos = { path = "../../../../", features = ["network"] }
esp-hal = { version = "0.21.1", features = ["esp32"] }
esp-backtrace = { version = "0.14.1", features = ["esp32", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.11.0", features = ["esp32"] }
esp-wifi = { version = "0.10.1", features = ["wifi", "esp-now"] }
static_cell = "2.0.0"

[features]
default = ["esp-hal/esp32", "esp-backtrace/esp32", "esp-println/esp32", "esp-wifi/esp32"]
