[package]
name = "rust_ex"
version = "0.1.0"
authors = ["Artem-Nesterenko2005 <hohol.amogus@mail.ru>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[lib]
crate-type = ["staticlib"]
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors


[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[build-dependencies]
embuild = "0.32.0"

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", default-features = false, features = [] }
martos = { version = "0.4.0", path = "../../../../..", features = ["c-library"] }
