[package]
name = "example_mips64_cooperative_scheduler"
version = "0.4.0"
edition = "2021"

[profile.release]
panic = "abort"
debug = true

[dependencies]
# Specifying Martos version
#martos = "0.4.0"
# Specifying current Martos version path for ci
martos = { path = "../../../../../", features = ["cooperative"] }
